Fix all spacing issues and finalize design

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,15 +19,35 @@ i {
   color: white;
   font-size: 50px !important;
   cursor: pointer;
+  margin: 0;
+}
+
+#splash-page {
+  margin-top: 30vh;
 }
 
 #recording-page {
+  margin-top: 10vh;
+  display: none;
+}
+
+#start-recording-page {
   display: none;
 }
 
 #title-wrapper {
   width: 100vw;
   position: fixed;
+}
+
+#first-label,
+#second-label {
+  display: inline;
+}
+
+#second-label {
+  margin-left: 15vw;
+  color: yellow;
 }
 
 .title {
@@ -39,10 +59,12 @@ i {
 }
 
 #chart {
+  margin-top: 25vh;
   position: absolute;
 }
 
 .chart-area-wrapper {
   width: 95vw;
   overflow-x: scroll;
+  margin: 0 auto;
 }
